--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm init -y
+        run: npm install
 
       - name: Run auto-update script
         run: node auto-update.js
@@ -27,5 +27,5 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add index.html
-          git commit -m "🤖 Auto-update predictions for $(date +%Y-%m-%d)" || echo "No changes to commit"
+          git commit -m "🤖 Auto-update with real matches for $(date +%Y-%m-%d)" || echo "No changes to commit"
           git push
